--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+# 0.1.3
+- Fontsamplers now support families with different widths
+- Each fontsampler instance is now wrapped in a DOM element with the fontsampler's ID for custom styling
+- Fixed a small interface alignment issues
+
 # 0.1.2
 - Added editable default setting for alignment
 - Fixed some alignment issues not properly respecting editable UI block height and underline
