--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+# 0.1.5
+- Fixed PHP 7 compability issues
+- Fixed issue that failed to apply css changes as a result from a plugin update
+- Forced browsers with spellcheckers and autocorrect to ignore the fontsampler text input
+
 # 0.1.4
 - Updated to allow for more lenient italic detection (now also from Font name)
 - Fix small possible alignment interference from theme CSS
