--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+# 0.1.7
+- Hotfix to upload filetype filter
+
 # 0.1.6
 - Implemented workaround for WP core bug preventing file uploads for some users
 - Fixed uninstall script to run without error messages
