updated readme and changelog for 0.2.3

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+# 0.2.3
+- All font files are now handled via the WP media gallery popup in the admin area
+- Added option to delete all linked media gallery files when deleting a fontset
+- Added option to selected existing webfont file from media gallery for several fontsets
+- Added file and folder permissions check and notification to the admin area
+- Fixed an issue where removing one file would remove all files of a fontset
+- Fixed an issue where the initially selected font of a Fontsampler would not get saved
+- Fixed an issue where a setting in the server's php.ini would limit the amount of inline fonts that could be uploaded inline while adding a new Fontsampler
+
 # 0.2.2
 - Hotfix fixing missing default setting units for font size, line height and letterspacing sliders after saving settings
 - Implemented further checks for ensuring the default settings are valid
