--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
-# 0.3.1 & 0.3.2
+# 0.3.1, 0.3.2, 0.3.3
 - Hotfix to prevent buggy PHP 5.6 T_PAAMAYIM_NEKUDOTAYIM (::) error
+- Hotfix to prevent directory permissions check to detect a false positive
 
 # 0.3.0
 - Added a "What's new" tab that is shown after an updated, informing users of recent changes
