--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+# 0.3.6
+- Implemented a feature that strips pasted text of its original styling
+- Fixed an issue that caused dropdowns to not work on mobile devices
+- Fixed an issue in the admin area that overwrote font names when uploading several fonts at once
+- Fixed several styling and preview issues in the admin area
+
 # 0.3.1 - 0.3.5
 - Hotfix to prevent buggy PHP 5.6 T_PAAMAYIM_NEKUDOTAYIM (::) error
 - Hotfix to prevent directory permissions check to detect a false positive
