--- a/lang/fontsampler-fi_FI.po
+++ b/lang/fontsampler-fi_FI.po
@@ -2,32 +2,32 @@
 
 #: FontsamplerPlugin.php:90
 msgid "Size"
-msgstr "Schriftgröße"
+msgstr "Fonttikoko"
 
 #. translators: Default label for letter spacing slider in the front end
 
 #: FontsamplerPlugin.php:96
 msgid "Letter spacing"
-msgstr "Laufweite"
+msgstr "Välistys"
 
 #. translators: Default label for the line height slider in the front end
 
 #: FontsamplerPlugin.php:102
 msgid "Line height"
-msgstr "Durchschuss"
+msgstr "Riviväli"
 
 #. translators: Default label for the buy button in the front end
 
 #: FontsamplerPlugin.php:136
 msgid "Buy"
-msgstr "Kaufen"
+msgstr "Osta"
 
 #. translators: Default label for the specimen download button in the front end
 
 #: FontsamplerPlugin.php:142
 msgid "Specimen"
-msgstr "Muster"
+msgstr "Esimerkki"
 
 #: includes/interface.php:84
 msgid "Select a sample text"
-msgstr "Beispieltext auswählen"
+msgstr "Valitse"
