updated language POT, de and fi translations

--- a/lang/fontsampler-de_DE.po
+++ b/lang/fontsampler-de_DE.po
@@ -31,3 +31,8 @@ msgstr "Muster"
 #: includes/interface.php:84
 msgid "Select a sample text"
 msgstr "Beispieltext auswählen"
+
+#. translators: Default selection in the language (locl feature) dropdown
+#: FontsamplerPlugin.php:83
+msgid "Sprache auswählen"
+msgstr ""
