fixed css compatibility to other plugins (avoid .slider class) and implemented #138 improving slider performance in the backend

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+# 0.4.3
+- TWEAK: Improved admin interface slider responsivness and sanity checks
+- TWEAK: Fixed compability with misc plugins (css class conflicts)
+
 # 0.4.1 & 0.4.2
 - TWEAK: Hotfix to suppress a debug message
 
