--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 # 0.4.6
+- FIX: Fixed an issue with Media Gallery uploads prevented by Fontsampler mime type filters
+
+# 0.4.6
 - TWEAK: Bumped the PHP version requirement of Fontsampler itself to PHP 7.0.0. Do not upgrade Fontsampler unless your server supports at least PHP version 7.0.0!
 
 # 0.4.5
