--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+# 0.4.12
+- FIX: Minor fix to the loaded default CSS for the Fontsampler
+- FIX: Updates to Twig library and polyfills after some users reported PHP conflicts
+
 # 0.4.10 & 0.4.11
 - (0.4.11) HOTFIX: Added missing dependency files
 - FIX: Fixed saving alignment settings in admin
