Fix to JS assets, version bump

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 # 0.4.12
 - FIX: Minor fix to the loaded default CSS for the Fontsampler
 - FIX: Updates to Twig library and polyfills after some users reported PHP conflicts
+- FIX: Fix failed compile of JS asset in plugin
 
 # 0.4.10 & 0.4.11
 - (0.4.11) HOTFIX: Added missing dependency files
